<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/top_progress_bar"
        style="@style/FirebaseUI.TopProgressBar"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            style="@style/FirebaseUI.WrapperStyle"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading"
                style="@style/FirebaseUI.Text.Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fui_welcome_back_email_header"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_back_password_body"
                style="@style/FirebaseUI.Text.BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                tools:text="@string/fui_welcome_back_password_prompt_body" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/FirebaseUI.TextInputLayout.PasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fui_field_padding_vert"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back_password_body"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    style="@style/FirebaseUI.TextInputEditText.PasswordField" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/trouble_signing_in"
                style="@style/FirebaseUI.Text.Link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fui_field_padding_vert"
                android:text="@string/fui_trouble_signing_in"
                app:layout_constraintEnd_toStartOf="@+id/button_done"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

            <Button
                android:id="@+id/button_done"
                style="@style/FirebaseUI.Button"
                android:text="@string/fui_sign_in_default"
                app:layout_constraintStart_toEndOf="@+id/trouble_signing_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/trouble_signing_in" />

            <TextView
                android:id="@+id/email_footer_tos_and_pp_text"
                style="@style/FirebaseUI.PrivacyFooter"
                app:layout_constraintTop_toBottomOf="@+id/button_done"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Terms of Service and Privacy Policy" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>
